# ginger-js

./: .gitignore  LICENSE  README.md  ginger-js.cabal  make-module.sh  package-for-node.sh  stack.yaml
app/: Main.hs  Main.js
purescript-ginger/: bower.json  package.json
purescript-ginger/src/: Ginger.purs
purescript-test/: .gitignore  bower.json
purescript-test/src/: Main.purs
