name:                ginger-js
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tdammers/ginger-js#readme
license:             BSD3
license-file:        LICENSE
author:              Tobias Dammers
maintainer:          tdammers@gmail.com
copyright:           2016 Tobias Dammers
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable ginger-js-export
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , ghcjs-base
                     , ghcjs-ffiqq
                     , data-default
                     , ginger
                     , unordered-containers
                     , scientific
                     , text
                     , aeson
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


test-suite ginger-js-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ginger-js
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tdammers/ginger-js
